--- a/src/app/components/admin/policy-list/policy-list.component.html
+++ b/src/app/components/admin/policy-list/policy-list.component.html
@@ -17,9 +17,11 @@
       <div class="card-header">
         <div class="row">
           <div class="col col-xs-6">
-            <h3 class="panel-title">All Policies</h3>
+            <div class="row" style="text-align: left; color: #0053ee">
+              <h3 class="panel-title">All Policies</h3>
+            </div>
           </div>
-          <div class="col col-xs-6 text-right">
+          <div class="col col-xs-6 text-right" style="text-align: right">
             <button
               type="button"
               class="btn btn-primary"
