--- a/src/app/components/admin/transaction-list/transaction-list.component.html
+++ b/src/app/components/admin/transaction-list/transaction-list.component.html
@@ -4,7 +4,9 @@
       <div class="card-header">
         <div class="row">
           <div class="col col-xs-6">
-            <h3 class="panel-title">All Transactions</h3>
+            <div class="row" style="text-align: left; color: #0053ee">
+              <h3 class="panel-title">All Transactions</h3>
+            </div>
           </div>
         </div>
       </div>
