Made changes in home page Button

--- a/src/app/components/user/home/home.component.html
+++ b/src/app/components/user/home/home.component.html
@@ -32,7 +32,7 @@
           <a
             class="btn btn-primary btn-custom-link"
             (click)="purchasePolicy(item)"
-            >Purchase
+            >Buy
           </a>
           <a class="btn btn-secondary btn-custom-link" (click)="detail(item)"
             >Detail</a
