Front-End updated

--- a/src/app/components/template/user-template/user-template.component.html
+++ b/src/app/components/template/user-template/user-template.component.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
   ========================================
       User Navigation Bar
   =========================================
@@ -12,8 +12,8 @@
     <span
       ><img src="assets/imgs/flash-logo-png.png" width="40" height="32"
     /></span>
-    <span class="logo">Insurance</span>
   </a>
+  <h2 style="margin-bottom: 1.4mm ; color: rgb(224, 220, 220);font-family: 'Arial Narrow Bold';text-transform: capitalize;">Insurance Plus</h2>
   <button
     type="button"
     class="navbar-toggler"
@@ -27,10 +27,10 @@
   <div class="collapse navbar-collapse" id="navbarUser">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a href="/home" class="nav-link">Home</a>
+        <a href="/home" class="nav-link">Policies</a>
       </li>
     </ul>
-    <!-- 
+    <!--
   ========================================
       Admin Drop Down
   =========================================
@@ -83,7 +83,7 @@
       </div>
     </ul>
 
-    <!-- 
+    <!--
   ========================================
       User Drop Down
   =========================================
@@ -155,7 +155,7 @@
         <a href="/contact-us" class="nav-link"> Contact Us</a>
       </li>
     </ul>
-    <!-- 
+    <!--
   =============== After Admin is Login   =================================================
 -->
 
@@ -179,7 +179,7 @@
   </div>
 </nav>
 
-<!-- 
+<!--
   ========================================
       Admin Navigation Bar
   =========================================
@@ -193,8 +193,8 @@
     <span
       ><img src="assets/imgs/flash-logo-png.png" width="40" height="32"
     /></span>
-    <span class="logo">Insurance</span>
   </a>
+  <h2 style="margin-bottom: 1.4mm ; color: rgb(224, 220, 220);font-family: 'Arial Narrow Bold';text-transform: capitalize;">Insurance Plus</h2>
   <button
     type="button"
     class="navbar-toggler"
