Front-End Updated

--- a/src/app/components/template/index-template/index-template.component.html
+++ b/src/app/components/template/index-template/index-template.component.html
@@ -5,10 +5,10 @@
       <div
         class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center"
       >
-        <h1 data-aos="fade-up">Let's find you the Best Insurance</h1>
-        <h3 data-aos="fade-up" data-aos-delay="400">
+        <h1 data-aos="fade-up" style="font-family:'Arial Narrow Bold';">Let's find you the Best Insurance</h1>
+        <h3 data-aos="fade-up" data-aos-delay="400" style="font-family: 'Times New Roman', Times, serif;">
           When you buy insurance from us, you get more than just financial
-          safety. You also get: our promise of simplifying complex insurance
+          safety. You also get our promise of simplifying complex insurance
           terms and conditions, quick stress-free claims, instant quotes from
           top insurers and being present for you in the toughest of times.
         </h3>
