--- a/src/app/components/user/about-us/about-us.component.html
+++ b/src/app/components/user/about-us/about-us.component.html
@@ -19,8 +19,8 @@
   <div class="container py-5">
     <div class="row h-100 align-items-center py-5">
       <div class="col-lg-6">
-        <h2 class="display-4">About us</h2>
-        <p class="lead text-muted mb-0" style="text-align: justify">
+        <h2 class="display-4" >About us</h2>
+        <p class="lead text-muted mb-0" style="text-align: justify ; font-family:'Times New Roman', Times, serif;">
           <strong>
             The insurance company stipulates that an individual or business
             periodically pay them a specific amount of money as premium for the
@@ -136,7 +136,7 @@
       <div class="col-lg-5">
         <h2 class="display-4 font-weight-light">Our team</h2>
         <p class="font-italic text-muted">
-          This Application is Developed in Angular with Spring Boot
+          Powerful, scalable, Angular-Spring Boot application development.
         </p>
       </div>
     </div>
@@ -153,7 +153,7 @@
           />
           <h4 class="mb-0">Hrishikesh H. Lotekar</h4>
           <span class="small text-uppercase text-muted"
-            >Associate Engineer - Technology
+            >Java Full Stack Developer
           </span>
           <ul class="social mb-0 list-inline mt-3">
             <li class="list-inline-item">
