--- a/src/app/components/user/transaction-details/transaction-details.component.html
+++ b/src/app/components/user/transaction-details/transaction-details.component.html
@@ -17,7 +17,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
               Transaction Id
             </th>
-            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.user.id }}</td>
           </ng-container>
 
           <ng-container matColumnDef="firstName">
