--- a/src/app/components/admin/admin-profile/admin-profile.component.html
+++ b/src/app/components/admin/admin-profile/admin-profile.component.html
@@ -1,34 +1,62 @@
-<div class="container custom-container">
-  <h2>User Profile Details</h2>
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Username</th>
-        <th>City</th>
-        <th>Mobile No.</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>{{ currentAdmin.firstName }}</td>
-        <td>{{ currentAdmin.lastName }}</td>
-        <td>{{ currentAdmin.userName }}</td>
-        <td>{{ currentAdmin.city }}</td>
-        <td>{{ currentAdmin.mobileNo }}</td>
-        <td>
-          <a
-            class="btn btn-warning custom-btn-link"
-            (click)="editUserRequest(currentAdmin)"
-            ><em class="glyphicon glyphicon-pencil"></em
-          ></a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<div class="container">
+  <div class="row gutters">
+  <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
+  <div class="card h-100">
+    <div class="card-body">
+      <div class="row gutters">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+          <h5 class="mb-2 text-primary">Personal Details</h5>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="fullName">First Name</label>
+            <input type="text" class="form-control" id="fullName" placeholder="Enter first name" value="{{ currentAdmin.firstName }}" readonly>
+          </div>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="fullName">Last Name</label>
+            <input type="text" class="form-control" id="fullName" placeholder="Enter last name" value="{{ currentAdmin.lastName }}" readonly>
+          </div>
+        </div>
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="eMail">Email</label>
+            <input type="email" class="form-control" id="eMail" placeholder="Enter email ID" value="{{ currentAdmin.userName }}" readonly>
+          </div>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" class="form-control" id="phone" placeholder="Enter phone number" value="{{ currentAdmin.mobileNo }}" readonly>
+          </div>
+        </div>
+      </div>
+      <div class="row gutters">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+          <h5 class="mt-3 mb-2 text-primary">Address</h5>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="ciTy">City</label>
+            <input type="name" class="form-control" id="ciTy" placeholder="Enter City" value="{{ currentAdmin.city }}" readonly>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row gutters">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+          <div class="text-right">
+            <button type="button" id="submit" name="submit" class="btn btn-primary" (click)="editUserRequest(currentAdmin)">Update</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
 
 <!--========================================
     userModal -- Update User Details
