--- a/src/app/components/user/detail/detail.component.html
+++ b/src/app/components/user/detail/detail.component.html
@@ -1,6 +1,6 @@
 <div class="container custom-container">
-  <h2>Policy Details</h2>
-  <table class="table table-bordered">
+
+  <table class="table table-bordered" style="font-family: 'Arial Narrow Bold'; color: rgb(7, 75, 177);" >
     <thead>
       <tr>
         <th>Policy Id</th>
